  literal). (Ilia)
- Fixed bug #47598 (FILTER_VALIDATE_EMAIL is locale aware). (Ilia)
- Fixed bug #47546 (Default value for limit parameter in explode is 0, not -1).
  (Kalle)
- Fixed bug #47435 (FILTER_FLAG_NO_PRIV_RANGE does not work with ipv6
  addresses in the filter extension). (Ilia)
- Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
  previousSibling). (Rob)

26 Feb 2009, PHP 5.2.9
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)

- Fixed a crash on extract in zip when files or directories entry names contain 
  a relative path. (Pierre)
- Fixed error conditions handling in stream_filter_append(). (Arnaud)
- Fixed zip filename property read. (Pierre)
- Fixed explode() behavior with empty string to respect negative limit. (Shire)
- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image. Reported by Hamid Ebadi,
  APA Laboratory (Fixes CVE-2008-5498). (Scott)
- Fixed a segfault when malformed string is passed to json_decode(). (Scott)
- Fixed bug in xml_error_string() which resulted in messages being
  off by one. (Scott)

- Fixed bug #47422 (modulus operator returns incorrect results on 64 bit
  linux). (Matt)
- Fixed bug #47399 (mb_check_encoding() returns true for some illegal SJIS
  characters). (for-bugs at hnw dot jp, Moriyoshi)
- Fixed bug #47353 (crash when creating a lot of objects in object
  destructor). (Tony)
- Fixed bug #47322 (sscanf %d doesn't work). (Felipe)
- Fixed bug #47282 (FILTER_VALIDATE_EMAIL is marking valid email addresses
  as invalid). (Ilia)
- Fixed bug #47220 (segfault in dom_document_parser in recovery mode). (Rob)
- Fixed bug #47217 (content-type is not set properly for file uploads). (Ilia)
- Fixed bug #47174 (base64_decode() interprets pad char in mid string as